# project-data-visualizations

./: .gitignore  README.md  index.html  jest.config.js  package.json  pyproject.toml  tsconfig.json  webpack.config.js
cmd/: buildHTML.py
public/: okw.html
src/: app.ts  elements.json  layout.json  project-data-visualizations.ipynb  style.css  style.json  tooltips.ts
src/py/: elements.json  index.html  input-data.json  layout.json  project-data-visualizations.ipynb  style.css  style.json  temp.html
src/ts/: graph.ts  index.ts
src/ts/elements/: elements.ts
src/ts/elements/tests/: elements.json  elements.spec.ts
src/ts/style/: base-shapes.ts  css.ts  element.ts  fulfillment-plan-nodes.ts  index.ts  svg.ts
